select all elements

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <!-- TOP NAVIGATION -->
     <nav>
       <p class="welcome">Log in to get started</p>
-      <img src="logo.png" alt="Logo" class="logo" />
+      <img src="assets/logo.png" alt="Logo" class="logo" />
       <form class="login">
         <input
           type="text"
